--- a/src/output.css
+++ b/src/output.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  outline: none; }
 
 body {
   font-family: 'Indie Flower', cursive;
@@ -33,7 +34,6 @@ body {
   text-align: center;
   padding: 4%; }
   .main_form .myInput {
-    width: 20%;
     font-weight: 500;
     font-size: 20px;
     padding: 15px;
@@ -43,6 +43,15 @@ body {
     margin-right: 15px;
     -webkit-box-shadow: 0px 5px 40px -10px rgba(255, 4, 4, 0.57);
     -moz-box-shadow: 0px 5px 40px -10px rgba(255, 1, 1, 0.57); }
+    @media (min-width: 312px) {
+      .main_form .myInput {
+        width: 40%; } }
+    @media (min-width: 696px) {
+      .main_form .myInput {
+        width: 30%; } }
+    @media (min-width: 1180px) {
+      .main_form .myInput {
+        width: 20%; } }
     .main_form .myInput:focus:valid {
       color: red;
       font-family: 'Indie Flower', cursive; }
@@ -55,10 +64,18 @@ body {
   text-transform: uppercase;
   border-radius: 6px;
   border: 1px solid transparent;
-  width: 20%;
   transition: width 2s, height 2s, transform 2s linear;
   -webkit-box-shadow: 0px 5px 40px -10px rgba(255, 4, 4, 0.57);
   -moz-box-shadow: 0px 5px 40px -10px rgba(255, 1, 1, 0.57); }
+  @media (min-width: 312px) {
+    .myBtn {
+      width: 35%; } }
+  @media (min-width: 696px) {
+    .myBtn {
+      width: 30%; } }
+  @media (min-width: 1180px) {
+    .myBtn {
+      width: 20%; } }
   .myBtn.active:focus {
     outline: thin dotted;
     outline: 5px auto -webkit-focus-ring-color;
@@ -88,24 +105,36 @@ body {
   .container .weather_info {
     border: 2px solid rgba(255, 0, 0, 0.075);
     padding-top: 2rem;
-    width: 30rem;
-    height: 18rem;
     -webkit-box-shadow: 0px 5px 40px -10px rgba(255, 4, 4, 0.57);
     -moz-box-shadow: 0px 5px 40px -10px rgba(255, 1, 1, 0.57);
     flex-shrink: 1; }
-  @media screen and (max-width: 500px) {
-    .container .weather_info {
-      height: 10rem;
-      padding-top: 0;
-      box-shadow: 0 0 0 0;
-      border: 0; } }
+    @media (min-width: 312px) {
+      .container .weather_info {
+        width: 100%;
+        height: 100%; } }
+    @media (min-width: 696px) {
+      .container .weather_info {
+        width: 30rem;
+        height: 18rem; } }
+    @media (min-width: 1180px) {
+      .container .weather_info {
+        width: 30rem;
+        height: 18rem; } }
   .container .myimg {
     border: 2px solid rgba(255, 0, 0, 0.075);
     -webkit-box-shadow: 0px 5px 40px -10px rgba(255, 4, 4, 0.57);
     -moz-box-shadow: 0px 5px 40px -10px rgba(255, 1, 1, 0.57); }
-
-@media screen and (max-width: 500px) {
-  .container {
-    margin-top: 5px; } }
+    @media (min-width: 312px) {
+      .container .myimg {
+        width: 100%;
+        height: 100%; } }
+    @media (min-width: 696px) {
+      .container .myimg {
+        width: 30rem;
+        height: 18rem; } }
+    @media (min-width: 1180px) {
+      .container .myimg {
+        width: 30rem;
+        height: 18rem; } }
 
 /*# sourceMappingURL=output.css.map */
