--- a/src/input.scss
+++ b/src/input.scss
@@ -1,7 +1,9 @@
+@import 'responsive';
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
+    outline: none;
 
 }
 @mixin shadow{
@@ -45,7 +47,9 @@ body{
     text-align: center;
     padding: 4%;
     .myInput{
-     width: 20%;
+    @include breakpoint(s){ width: 40%;}
+@include breakpoint(m){ width: 30%;}
+@include breakpoint(l){ width: 20%;}
      font-weight: 500;
 font-size: 20px;
 padding: 15px;
@@ -68,10 +72,13 @@ background: #fc0202;
 color: #ffffff;
 font-size: 20px;
 padding: 0.8em 0.1em;
+@include breakpoint(s){ width: 35%;}
+@include breakpoint(m){ width: 30%;}
+@include breakpoint(l){ width: 20%;}
 text-transform: uppercase;
 border-radius: 6px;
      border: 1px solid transparent;
-     width: 20%;
+    
      transition: width 2s, height 2s, transform 2s linear;
 @include shadow;
       &.active {
@@ -104,34 +111,31 @@ letter-spacing: 0.01em;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-align-items: center;
+  align-items: center;
     .weather_info{
     border: 2px solid rgba(255, 0, 0, 0.075);
     padding-top: 2rem;
-  width: 30rem;
-  height: 18rem;
+
 @include shadow;
 flex-shrink: 1;
-    }
-    @media screen and (max-width: 500px) {
-  .weather_info {
- height: 10rem;
- padding-top:0;
- box-shadow: 0 0 0 0;
- border:0;
-  }
+   @include breakpoint(s){width: 100%;
+   height: 100%;}
+    @include breakpoint(m){width: 30rem;
+   height: 18rem;}
+    @include breakpoint(l){  width: 30rem;
+   height: 18rem;}
+  
 }
 .myimg{
     border: 2px solid rgba(255, 0, 0, 0.075);
+    
 @include shadow;
+ @include breakpoint(s){width:100%;height:100%;}
+ @include breakpoint(m){width:30rem;height:18rem;}
+ @include breakpoint(l){width:30rem;height:18rem;}
+}
 }
 
-}
- @media screen and (max-width: 500px) {
-  .container {
-margin-top:5px;
-  }
-}
 
 
 
